# module_features

./: .gitignore  LICENSE  MODULE.bazel
extensions/: BUILD.bazel  module_features.bzl
tests/: .bazelignore  BUILD.bazel  MODULE.bazel  feature_test.cc
tests/bar_dep/: BUILD.bazel  MODULE.bazel
tests/foo_dep/: BUILD.bazel  MODULE.bazel
